apply plugin: 'java'
apply plugin: 'maven'
group = 'nl.edulogo'
sourceCompatibility = 1.14
targetCompatibility = 1.14

import org.apache.tools.ant.filters.ReplaceTokens

def jdk = System.getProperty("java.home")
def moduleName = "edulogo.acslogo"
def mainClass = 'nl.edulogo.acslogo.Test'
def name = 'EduLogo'

// jar file task (we add the main class and classpath attributes to the manifest)
jar {
    manifest {
        attributes(
                'Main-Class': mainClass,
        )
    }
}

task cleanLibs() {
    project.delete "${buildDir}/libraries"
}

task copyDependencies(type: Copy, dependsOn: cleanLibs) {
    from configurations.runtime
    into "${buildDir}/libraries"
}

processResources {
    filesMatching('edul.properties') {
        filter ReplaceTokens, tokens: [
                'icon': file("${project.projectDir}/package/resources/EduScript.icns").toString()
        ]
    }
    print(file("${project.projectDir}/package/resources/edul.properties").toString())
}

// creates application bundle (executable + runtime)
task javaPackager(type: Exec, dependsOn: [assemble, copyDependencies, processResources]) {
    workingDir project.projectDir
    commandLine = [
            "${project.projectDir}/package/jpackager",
            'create-image',
            '-o', "${buildDir}/distribution",
            '-i', "${buildDir}/../src/main/resources",
            '-n', name,
            '-v', project.version,
            '--copyright', 'Copyright © 2019 Koen van Staveren, Daan Docters van Leeuwen en Daniël van Driel. All rights reserved.',
            '--identifier', 'nl.edulogo.eduscript',
            '--file-associations', file("${project.projectDir}/package/resources/edul.properties"),
            '-c', mainClass,
            '-p', "${jdk}/jmods${File.pathSeparator}${buildDir}/libraries${File.pathSeparator}${buildDir}/libs",
            '--icon', file("${project.projectDir}/package/resources/EduLogo.icns"),
            '--add-modules', moduleName,
            '-m', "$moduleName/$mainClass"
    ]
}
